[package]
name = "enum-unit"
version = "0.1.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/splurf/enum-unit"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "Generates unit-variant enums from existing enums."
keywords = ["enum", "procedural-macro", "unit-variant", "derive", "bitflags"]
categories = ["rust-patterns"]
exclude = [".github/", ".gitignore", "LICENSE", "tests/"]

[lib]
proc-macro = true

[dependencies]
bitflags = { version = "2.8.0", features = ["serde"], optional = true }
quote = "1.0.38"
serde = { version = "1.0.217", features = ["derive"], optional = true }
syn = { version = "2.0.96", features = ["derive", "parsing", "proc-macro"] }

[features]
bitflags = ["dep:bitflags"]
serde = ["dep:serde", "bitflags?/serde"]

[profile.release]
lto = true
codegen-units = 1
