[package]
name = "enum-unit"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/splurf/enum-unit"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "Generates unit-variant enums from existing enums."
keywords = ["enum", "procedural-macro", "unit-variant", "derive", "bitflags"]
categories = ["rust-patterns"]
exclude = [".github/", ".gitignore", "LICENSE", "tests/"]

[lib]
proc-macro = true

[dependencies]
bitflags = { version = "2.9.0", features = ["serde"], optional = true }
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"], optional = true }
syn = { version = "2.0.100", features = ["derive", "parsing", "proc-macro"] }

[dev-dependencies]
serde_json = "1.0.140"

[features]
full = ["bitflags", "serde"]
bitflags = ["dep:bitflags"]
serde = ["dep:serde", "bitflags?/serde"]

[profile.release]
lto = true
codegen-units = 1
