[package]
name = "enum-unit"
version = "0.2.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/eschwart/enum-unit"
authors = ["Evan Schwartzentruber <ejsch03@gmail.com>"]
description = "Generates unit-variant enums from existing enums."
keywords = ["enum", "procedural-macro", "unit-variant", "derive", "bitflags"]
categories = ["rust-patterns"]
exclude = [".github/", ".gitignore", "LICENSE", "tests/"]

[lib]
proc-macro = true

[features]
full = ["bitflags", "serde"]
bitflags = ["dep:bitflags"]
serde = ["dep:serde", "bitflags?/serde"]

[dependencies]
bitflags = { version = "2.9.1", features = ["serde"], optional = true }
convert_case = "0.8.0"
enum-unit-core = "0.1.2"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"], optional = true }
syn = { version = "2.0.104", features = ["derive", "parsing", "proc-macro"] }

[dev-dependencies]
serde_json = "1.0.141"

[profile.release]
lto = true
codegen-units = 1
